add label encoding pitfall

--- a/notebook-template.ipynb
+++ b/notebook-template.ipynb
@@ -341,7 +341,7 @@
    "id": "20dc7899",
    "metadata": {},
    "source": [
-    "## Ordinal Encoding\n",
+    "### Ordinal Encoding\n",
     "If the categories have an intrinsic order, we can use ordinal encoding.\n",
     "\n",
     "Here, we can see that Approval is categorical, so we need to convert it to numerical\n",
@@ -444,6 +444,64 @@
     "OH_X_valid = pd.concat([num_X_valid, OH_cols_valid], axis=1)\n",
     "\n",
     "print(OH_X_train.head())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d2b88196",
+   "metadata": {},
+   "source": [
+    "### **Pitfalls of categorical encoding**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a0cb51da",
+   "metadata": {},
+   "source": [
+    "If a label in the test set does not appear in the training set, the encoder will raise an error. This is a problem because your model will likely see new labels at prediction time that were not present in the training data.\n",
+    "\n",
+    "#### Example\n",
+    "```py\n",
+    "print(\"Unique values in 'Condition2' column in training data:\", X_train['Condition2'].unique())\n",
+    "print(\"\\nUnique values in 'Condition2' column in validation data:\", X_valid['Condition2'].unique())\n",
+    "```\n",
+    "```\n",
+    "Unique values in 'Condition2' column in training data: ['Norm' 'PosA' 'Feedr' 'PosN' 'Artery' 'RRAe']\n",
+    "Unique values in 'Condition2' column in validation data: ['Norm' 'RRAn' 'RRNn' 'Artery' 'Feedr' 'PosN']\n",
+    "```\n",
+    "If you now write code to:\n",
+    "- fit an ordinal encoder to the training data, and then\n",
+    "- use it to transform both the training and validation data,\n",
+    "you'll get an error.\n",
+    "\n",
+    "Fitting an ordinal encoder to a column in the training data creates a corresponding integer-valued label for each unique value that appears in the training data. In the case that the validation data contains values that don't also appear in the training data, the encoder will throw an error, because these values won't have an integer assigned to them. Notice that the 'Condition2' column in the validation data contains the values 'RRAn' and 'RRNn', but these don't appear in the training data -- thus, if we try to use an ordinal encoder with scikit-learn, the code will throw an error.\n",
+    "\n",
+    "This is a common problem that you'll encounter with real-world data, and there are many approaches to fixing this issue. For instance, you can write a custom ordinal encoder to deal with new categories. The simplest approach, however, is to drop the problematic categorical columns.\n",
+    "\n",
+    "```py\n",
+    "# Categorical columns in the training data\n",
+    "object_cols = [col for col in X_train.columns if X_train[col].dtype == \"object\"]\n",
+    "\n",
+    "# Columns that can be safely ordinal encoded\n",
+    "good_label_cols = [col for col in object_cols if \n",
+    "                   set(X_valid[col]).issubset(set(X_train[col]))]\n",
+    "        \n",
+    "# Problematic columns that will be dropped from the dataset\n",
+    "bad_label_cols = list(set(object_cols)-set(good_label_cols))\n",
+    "        \n",
+    "print('Categorical columns that will be ordinal encoded:', good_label_cols)\n",
+    "print('\\nCategorical columns that will be dropped from the dataset:', bad_label_cols)\n",
+    "```\n",
+    "\n",
+    "```py\n",
+    "# Drop categorical columns that will not be encoded\n",
+    "label_X_train = X_train.drop(bad_label_cols, axis=1)\n",
+    "label_X_valid = X_valid.drop(bad_label_cols, axis=1)\n",
+    "# Apply ordinal encoder to each column with categorical data\n",
+    "```"
    ]
   },
   {
